force-app/main/default/objects/Log__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <label>Is Closed</label>
    <type>Checkbox</type>
    <formula>OR(ISPICKVAL(Status__c, &quot;Resolved&quot;), ISPICKVAL(Status__c, &quot;Ignored&quot;))</formula>
</CustomField>