force-app/main/default/objects/Log__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>false</default></value>
            <value><fullName>Medium</fullName><default>true</default></value>
            <value><fullName>High</fullName><default>false</default></value>
            <value><fullName>Critical</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>