force-app/main/default/objects/Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default></value>
            <value><fullName>Investigating</fullName><default>false</default></value>
            <value><fullName>Resolved</fullName><default>false</default></value>
            <value><fullName>Ignored</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>